Handle the better performance of core-pva